--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/doorserve
-    username: akshit_kharbanda
+    username: ${PSQL_USERNAME}
     password: ""
     driver-class-name: org.postgresql.Driver
   jpa:
